--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,19 +1,24 @@
 Version 4.7
 =============
 
-1. Introduction of restart search both in JaCoP and flatzinc.
+1. Implementation of restart search both in JaCoP and flatzinc (uses
+   standard minizinc annotation).
 
-2. Making WeightedDegree variable selection method working correctly;
+2. Implementation of priority search both in JaCoP and in flatzinc
+   (uses annotation priority_search; check jacop specific library
+   definition at jacop.mzn for the definition).
+
+3. Making WeightedDegree variable selection method working correctly;
    available in flatzinc as dom_w_deg. Adding new variable selection
    methods based on accumulated failure count (AFC) and pruning
    activity; defined in flatzinc also.
 
-3. Time-out in flatzinc is changed to be specified in milliseconds (to
+4. Time-out in flatzinc is changed to be specified in milliseconds (to
    be compatible with minizinc options).
 
-4. Small corrections in pom.xml to use right version of Scala.
+5. Small corrections in pom.xml to use right version of Scala.
 
-5. Bug corrections.
+6. Bug corrections.
 
 Version 4.6
 =============
