Extending descriptions and adding new items.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,7 +5,7 @@ Version 4.7
    standard minizinc annotation).
 
 2. Implementation of priority search both in JaCoP and in flatzinc
-   (uses annotation priority_search; check jacop specific library
+   (uses annotation priority_search; check JaCoP specific library
    definition at jacop.mzn for the definition).
 
 3. Making WeightedDegree variable selection method working correctly;
@@ -17,7 +17,7 @@ Version 4.7
    be compatible with minizinc options).
 
 5. New distance step option for search with cost function specified as
-   FloatVar. Availble in both Java and flatzinc.
+   FloatVar. Available in both Java and flatzinc.
 
 6. Small corrections in pom.xml to use right version of Scala.
 
@@ -25,11 +25,14 @@ Version 4.7
    Minizinc 2.3. It uses fzn_*.mzn files to define JaCoP specific
    global constraint
 
-8. Definitions in redefintions.mzn and implementation of half-refified
+8. Definitions in redefintions.mzn and implementation of half-reified
    constraints, that is minizinc constraints with the name *_imp. Implementation
    of JaCoP constraint Implies.
 
-9. Bug corrections.
+9. Definitions and implementation of fzn_if_then_else_* constraints in
+   flatzinc JaCoP library and in Java (constraint Conditional).
+
+10. Bug corrections.
 
 Version 4.6
 =============
