New format for printing search classes (DepthFirstSearch and PrioritySearch). Including search in debug print-out for flatzinc.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -38,7 +38,10 @@ Version 4.7
 11. Flatzinc annotation "priority(k)" defining constraint priority
     (0..4) where 0 is the highest and 4 the lowest priority of a constraint.
 
-12. Bug corrections.
+12. New format for methods toString() for depth first search
+    methods. Flatzinc compiler prints search in debug mode.
+
+13. Bug corrections.
 
 Version 4.6
 =============
