Removing options -f and -p to denote format and precision. Instead --format and --precision must be used. New "free search" (option -f) based on AFCMaxDeg/AFCMax heuristics is defined.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,13 @@
+Version 4.8
+=============
+
+1. Removing -f (format) and -p (precision) option flags. Flatzinc uses
+   instead --format and --precision. Option -f is used to denote free
+   search, based on AFCMaxDeg/AFCMax variable selection method. The
+   default search (no search annotations) still uses the old search
+   method for compatibility reasons.
+2. Improving debug information print-out for flatzinc.
+
 Version 4.7
 =============
 
