New constraint Channel that generalizes reified constraints. Available in Java and from minizinc.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -29,27 +29,30 @@ Version 4.8
    CountValuesBounds. Changes in minizinc library for global
    cardinality constraints to use these two new constraints.
 
-10. Removing limitation in flatzinc compiler that flatzinc variables
+10. New constraint Channel that generalizes Reified
+    constraint. Available in Java and minizinc.
+
+11. Removing limitation in flatzinc compiler that flatzinc variables
     must have domains within interval
     IntDomain.MinInt..IntDomain.MaxInt. First constraints might report
     arithmetic overflow.
 
-11. Changing Scala compiler to 2.13.1 and making related code changes.
+12. Changing Scala compiler to 2.13.1 and making related code changes.
 
-12. Not recognized search options in flatzinc are ignored instead of
+13. Not recognized search options in flatzinc are ignored instead of
     aborting computation.
 
-13. Changing IntDomain.divIntBounds method to use double instead of floats
+14. Changing IntDomain.divIntBounds method to use double instead of floats
     for bounds calculations (better precision).
 
-14. Constraints XplusYplusQeqZ, XplusYplusCeqZ and XplusYplusQeqC are
+15. Constraints XplusYplusQeqZ, XplusYplusCeqZ and XplusYplusQeqC are
     removed. Use SumInt instead.
 
-15. Additional CountBounds constraint added in flatzinc translation of
+16. Additional CountBounds constraint added in flatzinc translation of
     global_cardinality_low_up_closed if domain consistency annotation
     is present (GCC does bounds consistency only).
 
-16. Bug corrections and performance improvements.
+17. Bug corrections and performance improvements.
 
 Version 4.7
 =============
