--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+Version 4.10
+=============
+
+1. Implementation of relax and reconstruct for restart
+   search. Avaiable in minizinc with search annotation
+   relax_and_reconstruct in combination with restart annotation.
+
 Version 4.9
 =============
 
