--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,8 @@ Version 4.10
    search. Avaiable in minizinc with search annotation
    relax_and_reconstruct in combination with restart annotation.
 
+2. Bug corrections, code cleaning and performance improvements.
+
 Version 4.9
 =============
 
