--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,12 +2,15 @@ Version 4.10
 =============
 
 1. Implementation of relax and reconstruct for restart
-   search. Avaiable in minizinc with search annotation
+   search. Available in minizinc with search annotation
    relax_and_reconstruct in combination with restart annotation.
 
-2. Command line options in flatzinc for restart search.
+2. Implementation of round, floor and ceil constraints in both JaCoP
+   (RoundPeqX, FloorPeqX and CeilPeqX) and for minizinc.
 
-3. Bug corrections, code cleaning and performance improvements.
+3. Command line options in flatzinc for restart search.
+
+4. Bug corrections, code cleaning and performance improvements.
 
 Version 4.9
 =============
